[package]
name = "moving_gc_arena"
version = "0.2.1"
authors = ["Jason Carr <jcarr250@protonmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "Lightweight Garbage-collectable regions using indices and explicit roots"
license = "MPL-2.0"
repository = "https://github.com/jasoncarr0/moving_gc_arena"
readme = "README.md"
categories = ["memory-management", "data-structures"]
keywords = ["memory", "garbage", "graph", "data-structure", "graph-algorithms"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug=true

[features]
debug-arena=[]
packed-headers=[]
